--- a/css/style.css
+++ b/css/style.css
@@ -143,3 +143,35 @@ hr{
     padding-left: 2px;
     padding-top: 5px;
 }
+
+.image_text{
+    margin-left: 70px;
+}
+
+.description{
+    margin-left: -750px;
+    font-size: 30px;
+    color: black;
+}
+
+.contact{
+    position: absolute;
+}
+.svyaz{
+    width: 300px;
+    height: 50px;
+    background-color: rgba(35,124,103,1);
+    border-radius: 10px;
+    font-family: 'Times New Roman', Times, serif;
+    text-align: center;
+    line-height: 50px;
+    color: white;
+    font-size: 24px;
+    font-weight: bold;
+    text-decoration: none;
+    display: inline-block;
+}
+.svyaz:hover{
+    background-color: rgb(13, 85, 68);
+    text-decoration: underline;
+}
