--- a/css/style.css
+++ b/css/style.css
@@ -143,3 +143,45 @@ hr{
     padding-left: 2px;
     padding-top: 5px;
 }
+.cat_list{
+    font-size: 18pt;
+    width: 20%;
+    font-weight: 400;
+    text-align: left;
+}
+.list-group-item{
+    padding: 8px 8px 8px 20px;
+    text-decoration: none;
+    border: 0.05rem solid rgba(46, 139, 87, 0.4);
+}
+.h-100 {
+    height: 100%!important;
+}
+.card {
+    position: relative;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    min-width: 0;
+    word-wrap: break-word;
+    background-color: #fff;
+    background-clip: border-box;
+    border: 0.05rem solid rgba(46, 139, 87, 0.2);
+    border-radius: 0.25rem;
+    font-size: 18pt;
+}
+.mb15rem{
+    margin-bottom: 1.5rem!important;
+}
+.max_width75{
+    width: 75%;
+    margin-top: 90px;
+    flex-wrap: wrap;
+}
+.col-lg-4 {
+    -ms-flex: 0 0 33.333333%;
+    flex: 0 0 33.333333%;
+    max-width: 30%;
+    min-width: 200px;
+}
